@@ -100,6 +100,20 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
+					<compilerArgs>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.util.random=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/jdk.internal.util=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.action=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.provider=ALL-UNNAMED</arg>
+						<arg>--add-exports</arg>
+						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
